--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"version": "0.1.0",
 	"author": "Drew Olsen <olsenj.andrew@gmail.com>",
 	"dependencies": {
-		"fastclick": "^1.0.6",
 		"favicons": "^6.1.0",
 		"gatsby": "^2.23.3",
 		"gatsby-background-image": "^1.1.1",
@@ -13,6 +12,7 @@
 		"gatsby-image": "^2.4.11",
 		"gatsby-link": "^2.4.7",
 		"gatsby-plugin-anchor-links": "^1.1.1",
+		"gatsby-plugin-fastclick": "^1.0.1",
 		"gatsby-plugin-manifest": "^2.4.11",
 		"gatsby-plugin-netlify": "^2.3.9",
 		"gatsby-plugin-offline": "^3.2.9",
