Removed test url

--- a/data/projects.json
+++ b/data/projects.json
@@ -127,6 +127,7 @@
   },
   {
     "name": "Infinite Graphics",
+    "year": "2014",
     "slug": "igi",
     "type": "Website Design & Development",
     "description": "Medium computer/electronics equipment company",
