--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"gatsby-link": "^2.4.7",
 		"gatsby-plugin-anchor-links": "^1.1.1",
 		"gatsby-plugin-fastclick": "^1.0.1",
+		"gatsby-plugin-google-fonts": "^1.0.1",
 		"gatsby-plugin-manifest": "^2.4.11",
 		"gatsby-plugin-netlify": "^2.3.9",
 		"gatsby-plugin-offline": "^3.2.9",
@@ -24,7 +25,6 @@
 		"gatsby-source-filesystem": "^2.3.11",
 		"gatsby-transformer-json": "^2.4.6",
 		"gatsby-transformer-sharp": "^2.5.5",
-		"node-sass": "^7.0.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -35,7 +35,8 @@
 		"typography-theme-bootstrap": "^0.16.19"
 	},
 	"devDependencies": {
-		"prettier": "2.0.5"
+		"prettier": "2.0.5",
+		"sass": "^1.55.0"
 	},
 	"keywords": [
 		"gatsby"
